# ServerCXX

./: CMakeLists.txt
src/: auth.cpp  auth.h  main.cpp
